Fixed bug with hover overlapping using pointer-events

--- a/SofthemeClassrooms/MVC/Content/RoomTable/RoomTable.css
+++ b/SofthemeClassrooms/MVC/Content/RoomTable/RoomTable.css
@@ -222,6 +222,7 @@
 }
 
 .line-details {
+    pointer-events: none;
     display: none;
     position: absolute !important;
 }
